--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -1,9 +1,9 @@
 name: Publish fidesctl
 
 on:
-  push:
-    tags:
-      - "*"
+  pull_request:
+    branches:
+      - main
 
 jobs:
   upload_to_pypi:
@@ -32,7 +32,4 @@ jobs:
       - name: Twine Upload
         run: |
           python setup.py sdist bdist_wheel 
-          twine upload dist/*
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+          git status
