--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -1,11 +1,9 @@
 name: Publish fidesctl
 
 on:
-  push:
+  pull_request:
     branches:
       - main
-    tags:
-      - "*"
 
 jobs:
   upload_to_pypi:
@@ -39,24 +37,6 @@ jobs:
         run: pip install twine wheel
 
       - name: Build the package
-        run: python setup.py sdist bdist_wheel
-
-      - name: Upload to test pypi
-        run: twine upload --repository testpypi dist/*
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
-
-      - name: Check Prod Tag
-        id: check-tag
         run: |
-          if [[ ${{ github.event.ref }} =~ ^refs/tags/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-              echo ::set-output name=match::true
-          fi
-
-      - name: Upload to pypi
-        if: steps.check-tag.outputs.match == 'true'
-        run: twine upload dist/*
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+          python setup.py sdist
+          git status
