--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -1,7 +1,9 @@
 name: Publish fidesctl
 
 on:
-  pull_request:
+  push:
+    tags:
+      - "*"
 
 jobs:
   upload_to_pypi:
@@ -34,7 +36,31 @@ jobs:
       - name: Install Twine and wheel
         run: pip install twine wheel
 
-      - name: Build the package
+      # The git reset is required here because the build modifies
+      # egg-info and the wheel becomes a dirty version
+      - name: Build the sdist
         run: |
           python setup.py sdist
-          git status
+          git reset --hard
+
+      - name: Build the wheel
+        run: bdist_wheel
+
+      - name: Upload to test pypi
+        run: twine upload --repository testpypi dist/*
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
+
+      - name: Check Prod Tag
+        id: check-tag
+        run: |
+          if [[ ${{ github.event.ref }} =~ ^refs/tags/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              echo ::set-output name=match::true
+          fi
+      - name: Upload to pypi
+        if: steps.check-tag.outputs.match == 'true'
+        run: twine upload dist/*
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
