Fix `fides --version` showing dirty in releases (#962)
* Fix `fides --version` showing dirty in releases

* update the gitignore

* Add workflow for uploading to testpypi (#951)

* Add workflow for uploading to testpypi

* Update token name

* Change versioning style ti pep440-pre

* Remove debugging trigger on PR

* Update changelog

* Try to properly tag version

* Add a debugging test

* Trigger build

* Edit the right file

* Remove debugging

* Update .github/workflows/publish_package_testpypi.yaml

Co-authored-by: Paul Sanders <psanders1@gmail.com>

* Combine test pypi logic with original publish package workflow

* Add debugging trigger to workflow

* Fix syntax error

* Install wheel

* Remove debugging

Co-authored-by: Paul Sanders <psanders1@gmail.com>

* remove extra line

* update gitignore

* add a line to the Dockerfile that resets the busted cache

* add the no-deps flag to the fidesctl pip install

* update the git ignore to test the change

* modify publish_package workflow to debug in CI

* revert last commit

* update CI to debug

* debug in CI

* tweak the test paths for CI

* fix the publish_package workflow

* tweak when the publish_package workflow is triggered

* fix the wheel build command

* update the changelog

* Update .github/workflows/publish_package.yaml

Co-authored-by: Allison King <allisonjuliaking@gmail.com>
Co-authored-by: Paul Sanders <psanders1@gmail.com>

--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -38,8 +38,15 @@ jobs:
       - name: Install Twine and wheel
         run: pip install twine wheel
 
-      - name: Build the package
-        run: python setup.py sdist bdist_wheel
+      # The git reset is required here because the build modifies
+      # egg-info and the wheel becomes a dirty version
+      - name: Build the sdist
+        run: |
+          python setup.py sdist
+          git reset --hard
+
+      - name: Build the wheel
+        run: python setup.py bdist_wheel
 
       - name: Upload to test pypi
         run: twine upload --repository testpypi dist/*
@@ -53,7 +60,6 @@ jobs:
           if [[ ${{ github.event.ref }} =~ ^refs/tags/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
               echo ::set-output name=match::true
           fi
-
       - name: Upload to pypi
         if: steps.check-tag.outputs.match == 'true'
         run: twine upload dist/*
