--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -53,6 +53,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.9"
+
       - name: Install Nox
         run: pip install nox>=2022
 
