--- a/data/dataset/manual_dataset.yml
+++ b/data/dataset/manual_dataset.yml
@@ -6,22 +6,22 @@ dataset:
       - name: filing_cabinet
         fields:
           - name: id
-            data_categories: [ system.operations ]
+            data_categories: [system.operations]
             fidesops_meta:
               primary_key: true
           - name: authorized_user
-            data_categories: [ user.provided.identifiable ]
+            data_categories: [user]
             fidesops_meta:
               data_type: string
           - name: customer_id
-            data_categories: [ user.provided.identifiable ]
+            data_categories: [user]
             fidesops_meta:
               references:
                 - dataset: postgres_example_test_dataset
                   field: customer.id
                   direction: from
           - name: payment_card_id
-            data_categories: [ system.operations ]
+            data_categories: [system.operations]
             fidesops_meta:
               references:
                 - dataset: postgres_example_test_dataset
@@ -30,11 +30,11 @@ dataset:
       - name: storage_unit
         fields:
           - name: box_id
-            data_categories: [ user.provided ]
+            data_categories: [user]
             fidesops_meta:
               primary_key: true
           - name: email
-            data_categories: [ user.provided.identifiable.contact.email ]
+            data_categories: [user.contact.email]
             fidesops_meta:
               identity: email
               data_type: string
