--- a/data/saas/dataset/adobe_campaign_dataset.yml
+++ b/data/saas/dataset/adobe_campaign_dataset.yml
@@ -11,11 +11,11 @@ dataset:
               data_type: string
               primary_key: True
           - name: age
-            data_categories: [user.derived.identifiable.non_specific_age]
+            data_categories: [user.non_specific_age]
             fidesops_meta:
               data_type: integer
           - name: birthDate
-            data_categories: [user.provided.identifiable.date_of_birth]
+            data_categories: [user.date_of_birth]
           - name: blackList
             data_categories: [system.operations]
             fidesops_meta:
@@ -77,7 +77,7 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: email
-            data_categories: [user.provided.identifiable.contact.email]
+            data_categories: [user.contact.email]
             fidesops_meta:
               data_type: string
           - name: emailFormat
@@ -87,13 +87,13 @@ dataset:
           - name: externalId
             data_categories: [system.operations]
           - name: fax
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
           - name: firstName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: gender
-            data_categories: [user.derived.identifiable.gender]
+            data_categories: [user.gender]
             fidesops_meta:
               data_type: string
           - name: href
@@ -109,7 +109,7 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: lastName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: location
@@ -117,28 +117,28 @@ dataset:
               data_type: object
             fields:
               - name: address1
-                data_categories: [user.provided.identifiable.contact.street]
+                data_categories: [user.contact.address.street]
               - name: address2
-                data_categories: [user.provided.identifiable.contact.street]
+                data_categories: [user.contact.address.street]
               - name: address3
-                data_categories: [user.provided.identifiable.contact.street]
+                data_categories: [user.contact.address.street]
               - name: address4
-                data_categories: [user.provided.identifiable.contact.street]
+                data_categories: [user.contact.address.street]
               - name: city
-                data_categories: [user.provided.identifiable.contact.city]
+                data_categories: [user.contact.address.city]
               - name: countryCode
-                data_categories: [user.provided.identifiable.contact.country]
+                data_categories: [user.contact.address.country]
               - name: stateCode
-                data_categories: [user.provided.identifiable.contact.state]
+                data_categories: [user.contact.address.state]
               - name: zipCode
                 data_categories:
-                  [user.provided.identifiable.contact.postal_code]
+                  [user.contact.address.postal_code]
           - name: middleName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
           - name: mobilePhone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
           - name: phone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
           - name: postalAddress
             fidesops_meta:
               data_type: object
@@ -158,19 +158,19 @@ dataset:
                 fidesops_meta:
                   data_type: string
               - name: line1
-                data_categories: [user.provided.identifiable.contact]
+                data_categories: [user.contact]
                 fidesops_meta:
                   data_type: string
               - name: line2
-                data_categories: [user.provided.identifiable.contact]
+                data_categories: [user.contact]
               - name: line3
-                data_categories: [user.provided.identifiable.contact]
+                data_categories: [user.contact]
               - name: line4
-                data_categories: [user.provided.identifiable.contact]
+                data_categories: [user.contact]
               - name: line5
-                data_categories: [user.provided.identifiable.contact]
+                data_categories: [user.contact]
               - name: line6
-                data_categories: [user.provided.identifiable.contact]
+                data_categories: [user.contact]
               - name: serialized
                 data_categories: [system.operations]
                 fidesops_meta:
@@ -198,7 +198,7 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: title
-            data_categories: [user.provided.identifiable.job_title]
+            data_categories: [user.job_title]
             fidesops_meta:
               data_type: string
       - name: marketing_history
@@ -208,11 +208,11 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: age
-            data_categories: [user.derived.identifiable.non_specific_age]
+            data_categories: [user.non_specific_age]
             fidesops_meta:
               data_type: integer
           - name: birthDate
-            data_categories: [user.provided.identifiable.date_of_birth]
+            data_categories: [user.date_of_birth]
           - name: blackList
             data_categories: [system.operations]
             fidesops_meta:
@@ -272,7 +272,7 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: email
-            data_categories: [user.provided.identifiable.contact.email]
+            data_categories: [user.contact.email]
             fidesops_meta:
               data_type: string
           - name: events
@@ -290,13 +290,13 @@ dataset:
           - name: externalId
             data_categories: [system.operations]
           - name: fax
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
           - name: firstName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: gender
-            data_categories: [user.derived.identifiable.gender]
+            data_categories: [user.gender]
             fidesops_meta:
               data_type: string
           - name: href
@@ -320,7 +320,7 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: lastName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: location
@@ -328,24 +328,24 @@ dataset:
               data_type: object
             fields:
               - name: address1
-                data_categories: [user.provided.identifiable.contact.street]
+                data_categories: [user.contact.address.street]
               - name: address2
-                data_categories: [user.provided.identifiable.contact.street]
+                data_categories: [user.contact.address.street]
               - name: address3
-                data_categories: [user.provided.identifiable.contact.street]
+                data_categories: [user.contact.address.street]
               - name: address4
-                data_categories: [user.provided.identifiable.contact.street]
+                data_categories: [user.contact.address.street]
               - name: city
-                data_categories: [user.provided.identifiable.contact.city]
+                data_categories: [user.contact.address.city]
               - name: countryCode
-                data_categories: [user.provided.identifiable.contact.country]
+                data_categories: [user.contact.address.country]
               - name: stateCode
-                data_categories: [user.provided.identifiable.contact.state]
+                data_categories: [user.contact.address.state]
               - name: zipCode
                 data_categories:
-                  [user.provided.identifiable.contact.postal_code]
+                  [user.contact.address.postal_code]
           - name: middleName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
           - name: minBroadLogEvents
             data_categories: [system.operations]
             fidesops_meta:
@@ -353,9 +353,9 @@ dataset:
           - name: minSubHistoEvents
             data_categories: [system.operations]
           - name: mobilePhone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
           - name: phone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
           - name: preferredLanguage
             data_categories: [system.operations]
             fidesops_meta:
@@ -371,6 +371,6 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: title
-            data_categories: [user.provided.identifiable.job_title]
+            data_categories: [user.job_title]
             fidesops_meta:
               data_type: string
