--- a/data/saas/dataset/salesforce_dataset.yml
+++ b/data/saas/dataset/salesforce_dataset.yml
@@ -49,11 +49,11 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: LastName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: FirstName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: Salutation
@@ -61,36 +61,36 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: Name
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
               read_only: True
           - name: OtherStreet
-            data_categories: [user.provided.identifiable.contact.street]
+            data_categories: [user.contact.address.street]
             fidesops_meta:
               data_type: string
           - name: OtherCity
-            data_categories: [user.provided.identifiable.contact.city]
+            data_categories: [user.contact.address.city]
             fidesops_meta:
               data_type: string
           - name: OtherState
-            data_categories: [user.provided.identifiable.contact.state]
+            data_categories: [user.contact.address.state]
             fidesops_meta:
               data_type: string
           - name: OtherPostalCode
-            data_categories: [user.provided.identifiable.contact.postal_code]
+            data_categories: [user.contact.address.postal_code]
             fidesops_meta:
               data_type: string
           - name: OtherCountry
-            data_categories: [user.provided.identifiable.contact.country]
+            data_categories: [user.contact.address.country]
             fidesops_meta:
               data_type: string
           - name: OtherLatitude
-            data_categories: [user.derived.identifiable.location]
+            data_categories: [user.location]
             fidesops_meta:
               data_type: string
           - name: OtherLongitude
-            data_categories: [user.derived.identifiable.location]
+            data_categories: [user.location]
             fidesops_meta:
               data_type: string
           - name: OtherGeocodeAccuracy
@@ -98,35 +98,35 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: OtherAddress
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
             fidesops_meta:
               data_type: string
           - name: MailingStreet
-            data_categories: [user.provided.identifiable.contact.street]
+            data_categories: [user.contact.address.street]
             fidesops_meta:
               data_type: string
           - name: MailingCity
-            data_categories: [user.provided.identifiable.contact.city]
+            data_categories: [user.contact.address.city]
             fidesops_meta:
               data_type: string
           - name: MailingState
-            data_categories: [user.provided.identifiable.contact.state]
+            data_categories: [user.contact.address.state]
             fidesops_meta:
               data_type: string
           - name: MailingPostalCode
-            data_categories: [user.provided.identifiable.contact.postal_code]
+            data_categories: [user.contact.address.postal_code]
             fidesops_meta:
               data_type: string
           - name: MailingCountry
-            data_categories: [user.provided.identifiable.contact.country]
+            data_categories: [user.contact.address.country]
             fidesops_meta:
               data_type: string
           - name: MailingLatitude
-            data_categories: [user.derived.identifiable.location]
+            data_categories: [user.location]
             fidesops_meta:
               data_type: string
           - name: MailingLongitude
-            data_categories: [user.derived.identifiable.location]
+            data_categories: [user.location]
             fidesops_meta:
               data_type: string
           - name: MailingGeocodeAccuracy
@@ -134,31 +134,31 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: MailingAddress
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
             fidesops_meta:
               data_type: string
           - name: Phone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: Fax
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
             fidesops_meta:
               data_type: string
           - name: MobilePhone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: HomePhone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: OtherPhone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: AssistantPhone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: ReportsToId
@@ -166,7 +166,7 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: Email
-            data_categories: [user.provided.identifiable.contact.email]
+            data_categories: [user.contact.email]
             fidesops_meta:
               data_type: string
           - name: Title
@@ -186,7 +186,7 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: Birthdate
-            data_categories: [user.provided.identifiable.date_of_birth]
+            data_categories: [user.date_of_birth]
           - name: Description
             data_categories: [system.operations]
             fidesops_meta:
@@ -321,11 +321,11 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: SuppliedEmail
-            data_categories: [user.provided.identifiable.contact.email]
+            data_categories: [user.contact.email]
             fidesops_meta:
               data_type: string
           - name: SuppliedPhone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: SuppliedCompany
@@ -391,19 +391,19 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: ContactPhone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: ContactMobile
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: ContactEmail
-            data_categories: [user.provided.identifiable.contact.email]
+            data_categories: [user.contact.email]
             fidesops_meta:
               data_type: string
           - name: ContactFax
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
             fidesops_meta:
               data_type: string
           - name: Comments
@@ -456,11 +456,11 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: LastName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: FirstName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: Salutation
@@ -468,7 +468,7 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: Name
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
               read_only: True
@@ -481,31 +481,31 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: Street
-            data_categories: [user.provided.identifiable.contact.street]
+            data_categories: [user.contact.address.street]
             fidesops_meta:
               data_type: string
           - name: City
-            data_categories: [user.provided.identifiable.contact.city]
+            data_categories: [user.contact.address.city]
             fidesops_meta:
               data_type: string
           - name: State
-            data_categories: [user.provided.identifiable.contact.state]
+            data_categories: [user.contact.address.state]
             fidesops_meta:
               data_type: string
           - name: PostalCode
-            data_categories: [user.provided.identifiable.contact.postal_code]
+            data_categories: [user.contact.address.postal_code]
             fidesops_meta:
               data_type: string
           - name: Country
-            data_categories: [user.provided.identifiable.contact.postal_code]
+            data_categories: [user.contact.address.postal_code]
             fidesops_meta:
               data_type: string
           - name: Latitude
-            data_categories: [user.derived.identifiable.location]
+            data_categories: [user.location]
             fidesops_meta:
               data_type: string
           - name: Longitude
-            data_categories: [user.derived.identifiable.location]
+            data_categories: [user.location]
             fidesops_meta:
               data_type: string
           - name: GeocodeAccuracy
@@ -513,23 +513,23 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: Address
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
             fidesops_meta:
               data_type: string
           - name: Phone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: MobilePhone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: Fax
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
             fidesops_meta:
               data_type: string
           - name: Email
-            data_categories: [user.provided.identifiable.contact.email]
+            data_categories: [user.contact.email]
             fidesops_meta:
               data_type: string
           - name: Website
@@ -726,17 +726,17 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: Name
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
               read_only: True
           - name: FirstName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
               read_only: True
           - name: LastName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
               read_only: True
@@ -745,39 +745,39 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: Street
-            data_categories: [user.provided.identifiable.contact.street]
+            data_categories: [user.contact.address.street]
             fidesops_meta:
               data_type: string
           - name: City
-            data_categories: [user.provided.identifiable.contact.city]
+            data_categories: [user.contact.address.city]
             fidesops_meta:
               data_type: string
           - name: State
-            data_categories: [user.provided.identifiable.contact.state]
+            data_categories: [user.contact.address.state]
             fidesops_meta:
               data_type: string
           - name: PostalCode
-            data_categories: [user.provided.identifiable.contact.postal_code]
+            data_categories: [user.contact.address.postal_code]
             fidesops_meta:
               data_type: string
           - name: Country
-            data_categories: [user.provided.identifiable.contact.country]
+            data_categories: [user.contact.address.country]
             fidesops_meta:
               data_type: string
           - name: Email
-            data_categories: [user.provided.identifiable.contact.email]
+            data_categories: [user.contact.email]
             fidesops_meta:
               data_type: string
           - name: Phone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: Fax
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
             fidesops_meta:
               data_type: string
           - name: MobilePhone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: Description
@@ -842,7 +842,7 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: Name
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: Type
@@ -854,31 +854,31 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: BillingStreet
-            data_categories: [user.provided.identifiable.contact.street]
+            data_categories: [user.contact.address.street]
             fidesops_meta:
               data_type: string
           - name: BillingCity
-            data_categories: [user.provided.identifiable.contact.city]
+            data_categories: [user.contact.address.city]
             fidesops_meta:
               data_type: string
           - name: BillingState
-            data_categories: [user.provided.identifiable.contact.state]
+            data_categories: [user.contact.address.state]
             fidesops_meta:
               data_type: string
           - name: BillingPostalCode
-            data_categories: [user.provided.identifiable.contact.postal_code]
+            data_categories: [user.contact.address.postal_code]
             fidesops_meta:
               data_type: string
           - name: BillingCountry
-            data_categories: [user.provided.identifiable.contact.country]
+            data_categories: [user.contact.address.country]
             fidesops_meta:
               data_type: string
           - name: BillingLatitude
-            data_categories: [user.derived.identifiable.location]
+            data_categories: [user.location]
             fidesops_meta:
               data_type: string
           - name: BillingLongitude
-            data_categories: [user.derived.identifiable.location]
+            data_categories: [user.location]
             fidesops_meta:
               data_type: string
           - name: BillingGeocodeAccuracy
@@ -886,35 +886,35 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: BillingAddress
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
             fidesops_meta:
               data_type: string
           - name: ShippingStreet
-            data_categories: [user.provided.identifiable.contact.street]
+            data_categories: [user.contact.address.street]
             fidesops_meta:
               data_type: string
           - name: ShippingCity
-            data_categories: [user.provided.identifiable.contact.city]
+            data_categories: [user.contact.address.city]
             fidesops_meta:
               data_type: string
           - name: ShippingState
-            data_categories: [user.provided.identifiable.contact.state]
+            data_categories: [user.contact.address.state]
             fidesops_meta:
               data_type: string
           - name: ShippingPostalCode
-            data_categories: [user.provided.identifiable.contact.postal_code]
+            data_categories: [user.contact.address.postal_code]
             fidesops_meta:
               data_type: string
           - name: ShippingCountry
-            data_categories: [user.provided.identifiable.contact.country]
+            data_categories: [user.contact.address.country]
             fidesops_meta:
               data_type: string
           - name: ShippingLatitude
-            data_categories: [user.derived.identifiable.location]
+            data_categories: [user.location]
             fidesops_meta:
               data_type: string
           - name: ShippingLongitude
-            data_categories: [user.derived.identifiable.location]
+            data_categories: [user.location]
             fidesops_meta:
               data_type: string
           - name: ShippingGeocodeAccuracy
@@ -922,15 +922,15 @@ dataset:
             fidesops_meta:
               data_type: string
           - name: ShippingAddress
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
             fidesops_meta:
               data_type: string
           - name: Phone
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: Fax
-            data_categories: [user.provided.identifiable.contact]
+            data_categories: [user.contact]
             fidesops_meta:
               data_type: string
           - name: AccountNumber
