--- a/data/saas/dataset/segment_dataset.yml
+++ b/data/saas/dataset/segment_dataset.yml
@@ -6,7 +6,7 @@ dataset:
       - name: segment_user
         fields:
           - name: segment_id
-            data_categories: [user.derived.identifiable.unique_id]
+            data_categories: [user.unique_id]
             fidesops_meta:
               primary_key: True
       - name: track_events
@@ -18,13 +18,13 @@ dataset:
               - name: type
                 data_categories: [system.operations]
               - name: id
-                data_categories: [user.derived.identifiable.unique_id]
+                data_categories: [user.unique_id]
           - name: context
             data_categories: [system.operations]
           - name: library
             fields:
               - name: name
-                data_categories: [user.provided.identifiable.name]
+                data_categories: [user.name]
                 fidesops_meta:
                   data_type: string
               - name: version
@@ -56,71 +56,71 @@ dataset:
           - name: address
             fields:
               - name: city
-                data_categories: [user.provided.identifiable.contact.city]
+                data_categories: [user.contact.address.city]
                 fidesops_meta:
                   data_type: string
               - name: country
-                data_categories: [user.provided.identifiable.contact.country]
+                data_categories: [user.contact.address.country]
                 fidesops_meta:
                   data_type: string
               - name: postalCode
-                data_categories: [user.provided.identifiable.contact.postal_code]
+                data_categories: [user.contact.address.postal_code]
                 fidesops_meta:
                   data_type: string
               - name: state
-                data_categories: [user.provided.identifiable.contact.state]
+                data_categories: [user.contact.address.state]
                 fidesops_meta:
                   data_type: string
           - name: age
-            data_categories: [user.provided.identifiable.non_specific_age]
+            data_categories: [user.non_specific_age]
           - name: avatar
             data_categories: [system.operations]
           - name: createdAt
             data_categories: [system.operations]
           - name: description
-            data_categories: [user.provided.identifiable]
+            data_categories: [user]
           - name: email
-            data_categories: [user.provided.identifiable.contact.email]
+            data_categories: [user.contact.email]
             fidesops_meta:
               data_type: string
           - name: firstName
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: gender
-            data_categories: [user.provided.identifiable.gender]
+            data_categories: [user.gender]
             fidesops_meta:
               data_type: string
           - name: id
-            data_categories: [user.derived.identifiable.unique_id]
+            data_categories: [user.unique_id]
           - name: industry
             data_categories: [system.operations]
           - name: lastName
           - name: name
-            data_categories: [ user.provided.identifiable.name ]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: phone
-            data_categories: [ user.provided.identifiable.contact.phone_number ]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: subscriptionStatus
           - name: title
-            data_categories: [ user.provided.identifiable.name ]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: username
-            data_categories: [ user.provided.identifiable.name ]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: website
-            data_categories: [ user.provided.identifiable ]
+            data_categories: [user]
             fidesops_meta:
               data_type: string
       - name: external_ids
         fields:
           - name: id
-            data_categories: [user.derived.identifiable.unique_id]
+            data_categories: [user.unique_id]
           - name: type
             data_categories: [system.operations]
           - name: source_id
