--- a/data/saas/dataset/sendgrid_dataset.yml
+++ b/data/saas/dataset/sendgrid_dataset.yml
@@ -6,56 +6,56 @@ dataset:
       - name: contacts
         fields:
           - name: id
-            data_categories: [user.derived.identifiable.unique_id]
+            data_categories: [user.unique_id]
             fidesops_meta:
               data_type: string
               primary_key: True
           - name: first_name
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: last_name
-            data_categories: [user.provided.identifiable.name]
+            data_categories: [user.name]
             fidesops_meta:
               data_type: string
           - name: email
-            data_categories: [user.provided.identifiable.contact.email]
+            data_categories: [user.contact.email]
             fidesops_meta:
               data_type: string
           - name: alternate_emails
-            data_categories: [user.provided.identifiable.contact.email]
+            data_categories: [user.contact.email]
             fidesops_meta:
               data_type: string[]
           - name: address_line_1
-            data_categories: [user.provided.identifiable.contact.street]
+            data_categories: [user.contact.address.street]
             fidesops_meta:
               data_type: string
           - name: address_line_2
-            data_categories: [user.provided.identifiable.contact.street]
+            data_categories: [user.contact.address.street]
             fidesops_meta:
               data_type: string
           - name: city
-            data_categories: [user.provided.identifiable.contact.city]
+            data_categories: [user.contact.address.city]
             fidesops_meta:
               data_type: string
           - name: state_province_region
-            data_categories: [user.provided.identifiable.contact.state]
+            data_categories: [user.contact.address.state]
             fidesops_meta:
               data_type: string
           - name: country
-            data_categories: [user.provided.identifiable.contact.country]
+            data_categories: [user.contact.address.country]
             fidesops_meta:
               data_type: string
           - name: postal_code
-            data_categories: [user.provided.identifiable.contact.postal_code]
+            data_categories: [user.contact.address.postal_code]
             fidesops_meta:
               data_type: string
           - name: phone_number
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: whatsapp
-            data_categories: [user.provided.identifiable.contact.phone_number]
+            data_categories: [user.contact.phone_number]
             fidesops_meta:
               data_type: string
           - name: list_ids
@@ -84,5 +84,3 @@ dataset:
       #     data_categories: [user.provided.nonidentifiable] # not sure about this?
       #     fidesops_meta:
       #       data_type: string
-              
-          
