--- a/pytest.ini
+++ b/pytest.ini
@@ -20,6 +20,7 @@ markers =
     integration_sentry
     integration_stripe
     integration_hubspot
+    integration_datadog
     integration_segment
     integration_sendgrid
     integration_auth0
