Notify fidesdemo on new releases (#1075)
* Notify fidesdemo on new releases

* Update `CHANGELOG.md`

Co-authored-by: Paul Sanders <pau@ethyca.com>

--- a/.github/workflows/release_event.yml
+++ b/.github/workflows/release_event.yml
@@ -1,11 +1,11 @@
-name: Release Dispatch Event
+name: Notify Downstream Projects of Release
 
 on:
   release:
     types: [released]
 
 jobs:
-  Notify-of-New-Release:
+  fidesops-plus:
     runs-on: ubuntu-latest
     steps:
       - name: Repository Dispatch
@@ -13,5 +13,16 @@ jobs:
         with:
           token: ${{ secrets.DISPATCH_ACCESS_TOKEN }}
           repository: ethyca/fidesops-plus
+          event-type: new-fidesops-release
+          client-payload: '{"tag": "${{ github.event.release.tag_name }}", "url": "${{ github.event.release.html_url }}"}'
+
+  fidesdemo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository Dispatch
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.DISPATCH_ACCESS_TOKEN }}
+          repository: ethyca/fidesdemo
           event-type: new-fidesops-release
           client-payload: '{"tag": "${{ github.event.release.tag_name }}", "url": "${{ github.event.release.html_url }}"}'
