--- a/tests/ctl/test_invalid_config.toml
+++ b/tests/ctl/test_invalid_config.toml
@@ -1,10 +1,10 @@
 [database]
 server="localhost"
 user="postgres"
-password="fidesctl"
+password="fides"
 port="5432"
-db="fidesctl"
-test_db="fidesctl_test"
+db="fides"
+test_db="fides_test"
 
 [logging]
 level = "INFO"
